# witnesscalc

./: CMakeLists.txt  add_circuit.sh
src/: CMakeLists.txt  main.cpp  witnesscalc_proveSha1Sha1Sha1EcdsaBrainpoolP224r1.cpp  witnesscalc_proveSha1Sha1Sha1EcdsaBrainpoolP224r1.h  witnesscalc_proveSha1Sha1Sha1EcdsaSecp256r1.cpp  witnesscalc_proveSha1Sha1Sha1EcdsaSecp256r1.h  witnesscalc_proveSha1Sha1Sha1Rsa655374096.cpp  witnesscalc_proveSha1Sha1Sha1Rsa655374096.h  witnesscalc_proveSha1Sha256Sha256Rsa655374096.cpp  witnesscalc_proveSha1Sha256Sha256Rsa655374096.h  witnesscalc_proveSha256Sha224Sha224EcdsaBrainpoolP224r1.cpp  witnesscalc_proveSha256Sha224Sha224EcdsaBrainpoolP224r1.h  witnesscalc_proveSha256Sha256Sha256BrainpoolP256r1.cpp  witnesscalc_proveSha256Sha256Sha256BrainpoolP256r1.h  witnesscalc_proveSha256Sha256Sha256EcdsaBrainpoolP224r1.cpp  witnesscalc_proveSha256Sha256Sha256EcdsaBrainpoolP224r1.h  witnesscalc_proveSha256Sha256Sha256EcdsaBrainpoolP256r1.cpp  witnesscalc_proveSha256Sha256Sha256EcdsaBrainpoolP256r1.h  witnesscalc_proveSha256Sha256Sha256EcdsaSecp256r1.cpp  witnesscalc_proveSha256Sha256Sha256EcdsaSecp256r1.h  witnesscalc_proveSha384Sha384Sha384EcdsaBrainpoolP384r1.cpp  witnesscalc_proveSha384Sha384Sha384EcdsaBrainpoolP384r1.h
